# RLMario

./: README.md  RandomAgent.py  pyproject.toml  train.py  trian_dqn.py  watch_agent.py
board/PPO-MarioBros_1/: events.out.tfevents.1756031463.Kevin-Sze.24318.0  events.out.tfevents.1756140147.Kevin-Sze.2392.0  events.out.tfevents.1756313698.Kevin-Sze.16919.0
mario_training_logs/board_logs/PPO-MarioBros_1/: events.out.tfevents.1756313698.Kevin-Sze.16919.0
mario_training_logs/monitor_logs/: 0.monitor.csv  1.monitor.csv  2.monitor.csv  3.monitor.csv
mario_training_logs_dqn/monitor_logs_dqn/: 0.monitor.csv
tmp/: 0.monitor.csv  1.monitor.csv  2.monitor.csv  3.monitor.csv  monitor.csv
tmp_dqn/: 1.monitor.csv  2.monitor.csv  3.monitor.csv
