[project]
name = "mariocart"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ale-py>=0.8.0",
    "gymnasium[accept-rom-license,atari]>=0.29.0",
    "numpy<2.0",
    "stable-baselines3==2.3.2",
    "tensorboard>=2.20.0",
    "torch>=2.0,<2.3",
    "torchvision==0.17.0",
]
